--- a/Tic-Tac-toe/tictactoe/src/Components/Css/Board.module.css
+++ b/Tic-Tac-toe/tictactoe/src/Components/Css/Board.module.css
@@ -1,3 +1,15 @@
+:root {
+  --cell-border-color: white;
+  --cell-icon-color: white;
+  --cell-hover-stroke: rgba(255, 255, 255, 0.3);
+}
+@media (prefers-color-scheme: light) {
+  :root {
+    --cell-border-color: rgba(33, 53, 71, 0.77);
+    --cell-icon-color: rgba(33, 53, 71, 0.87);
+    --cell-hover-stroke: rgba(33, 53, 71, 0.3);
+  }
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -32,7 +44,7 @@ body {
 .cell {
   width: 100px;
   height: 100px;
-  border: 2px solid white;
+  border: 2px solid var(--cell-border-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,16 +58,17 @@ body {
 }
 .cell i {
   font-size: 4.75rem; 
-  color: white;
-  -webkit-text-stroke: 4px white;
-   
+  color: var(--cell-icon-color);
+  -webkit-text-stroke: 4px var(--cell-icon-color);
 }
+
 /* Hover */
 .circle .cell:not(.x):not(.circle):hover i,
 .x .cell:not(.x):not(.circle):hover i {
   color: transparent; 
-  -webkit-text-stroke: 5px rgba(255, 255, 255, 0.3); 
+  -webkit-text-stroke: 5px var(--cell-hover-stroke);
 }
+
 /* Remover bordas duplicadas */
 .cell:nth-child(1),
 .cell:nth-child(2),
@@ -117,6 +130,7 @@ body {
 .show-result-message {
   display: flex;
 }
+
 
 
 
